--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,7 @@ edition = "2021"
 [dependencies]
 reqwest = { version = "0.11", features = ["blocking"] }
 yaml-rust = "0.4"
-log = "0.4.0"
-env_logger = "0.8.4"
+chrono = "0.4"
 
 [[bin]]
 name = "monitor"
