--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,14 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+# NPM (way too many dependencies) experience
 [dependencies]
-reqwest = { version = "0.11", features = ["blocking"] }
-yaml-rust = "0.4"
+anyhow = "1.0"
+reqwest = { version = "0.11", features = ["json"] }
 chrono = "0.4"
+serde_json = "1.0.79"
+serde = {version = "1.0.136", features = ["derive"]}
+serde_yaml = "0.8.23"
+tokio = { version = "1.17.0", features = ["full"] }
 
-[[bin]]
-name = "monitor"
-path = "main.rs"
+
