--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,11 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 reqwest = { version = "0.11", features = ["json"] }
-chrono = "0.4"
 serde_json = "1.0.79"
 serde = {version = "1.0.136", features = ["derive"]}
 serde_yaml = "0.8.23"
 tokio = { version = "1.17.0", features = ["full"] }
+simple_logger = {version = "2.1.0", default_features = false, features = ["timestamps"]}
+log = "0.4.14"
 
 
