--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-# NPM (way too many dependencies) experience
 [dependencies]
 anyhow = "1.0"
 reqwest = { version = "0.11", features = ["json"] }
@@ -16,4 +15,5 @@ tokio = { version = "1.17.0", features = ["full"] }
 simple_logger = {version = "2.1.0", default_features = false, features = ["timestamps"]}
 log = "0.4.14"
 
-
+[profile.release]
+strip = "debuginfo"
